# lbm-dem

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile.am  README.md  annotated.html  annotated_dup.js  appveyor.yml  circle.yml  classes.html  classlbmdem_1_1_lb_node-members.html  classlbmdem_1_1_lb_node.html  classlbmdem_1_1_lb_node.js  classlbmdem_1_1_lb_node_a23326960ed2ecdc55a22c909e0aa90df_cgraph.dot  classlbmdem_1_1_lb_node_a23326960ed2ecdc55a22c909e0aa90df_cgraph.md5  classlbmdem_1_1_lb_node_ab14242bf2249fdb7bff1118d2793c076_icgraph.dot  classlbmdem_1_1_lb_node_ab14242bf2249fdb7bff1118d2793c076_icgraph.md5  codecov.yml  configure.ac  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  lb__node_8h.html  lb__node_8h__dep__incl.dot  lb__node_8h__dep__incl.md5  (+24 more)
cmake/: FindKOKKOS.cmake
include/: daqb.h  daqb.tcc  factory.h  fluid_node.h  lattice.h  lattice.tcc  lb_grid.h  lb_node.h  model.h  patch.h  settings.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js
src/: lattice.cc  main.cc
tests/: daqb_test.cc  kokkos.cc  lattice_test.cc  lb_node_2d_test.cc  lb_node_3d_test.cc  lb_node_test.cc  model_test.cc  patch.cc  test.cc
